# GameOfLife

./: .gitignore  CMakeLists.txt  GOL.c  GOL.h  README.md  main  main.c
